--- a/model/rf_model.ipynb
+++ b/model/rf_model.ipynb
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "19af47f9",
    "metadata": {},
    "outputs": [
@@ -981,15 +981,12 @@
       " ' Fwd IAT Mean' 'Init_Win_bytes_forward' 'Bwd Packet Length Max'\n",
       " ' Flow IAT Std' ' Bwd Packets/s' ' Packet Length Mean' ' Fwd IAT Min'\n",
       " ' Bwd Packet Length Min' ' Bwd Packet Length Mean' ' Fwd IAT Max'\n",
-      " ' Bwd Header Length' ' Subflow Bwd Bytes' 'Fwd IAT Total'\n",
-      " ' Avg Fwd Segment Size' ' Subflow Fwd Bytes' ' Fwd IAT Std'\n",
-      " ' Flow Packets/s' ' Subflow Bwd Packets' 'Fwd Packets/s' ' Flow IAT Max'\n",
-      " ' Flow Duration' ' Total Backward Packets']\n"
+      " ' Bwd Header Length' ' Subflow Bwd Bytes']\n"
      ]
     }
    ],
    "source": [
-    "top_k = 30\n",
+    "top_k = 20\n",
     "top_features = feature_importance_df['Feature'][:top_k].values\n",
     "\n",
     "X_train_selected = X_train_normalised[top_features]\n",
@@ -1047,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "9e3a22e4",
    "metadata": {},
    "outputs": [
@@ -1059,20 +1056,17 @@
       "TRAINING GPU-ACCELERATED MODEL\n",
       "======================================================================\n",
       "\n",
-      "📊 Dataset Information:\n",
+      "Dataset Information:\n",
       "   Training samples: 25,140,675\n",
-      "   Features: 30\n",
+      "   Features: 20\n",
       "   Classes: 15\n",
       "\n",
-      "🚀 Initializing XGBoost with GPU acceleration...\n",
+      "Initializing XGBoost with GPU acceleration...\n",
       "\n",
-      "🏋️ Starting GPU training...\n",
+      "Starting GPU training...\n",
       "   (This should be 5-20x faster than CPU RandomForest)\n",
-      "   Classes: 15\n",
       "\n",
-      "🚀 Initializing XGBoost with GPU acceleration...\n",
-      "\n",
-      "🏋️ Starting GPU training...\n",
+      "Starting GPU training...\n",
       "   (This should be 5-20x faster than CPU RandomForest)\n"
      ]
     },
@@ -1080,7 +1074,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\amos\\Documents\\50.020-Network-Security-Project\\.venv\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [16:20:31] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "c:\\Users\\amos\\Documents\\50.020-Network-Security-Project\\.venv\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [16:42:09] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  bst.update(dtrain, iteration=i, fobj=obj)\n"
@@ -1091,39 +1085,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✓ Training completed!\n",
-      "   ⏱️  Time: 316.98 seconds (5.28 minutes)\n",
+      "Training completed!\n",
+      "Time: 262.02 seconds (4.37 minutes)\n",
       "\n",
-      "🔮 Making predictions on test set...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\amos\\Documents\\50.020-Network-Security-Project\\.venv\\Lib\\site-packages\\xgboost\\core.py:774: UserWarning: [16:25:40] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\common\\error_msg.cc:62: Falling back to prediction using DMatrix due to mismatched devices. This might lead to higher memory usage and slower performance. XGBoost is running on: cuda:0, while the input data is on: cpu.\n",
-      "Potential solutions:\n",
-      "- Use a data structure that matches the device ordinal in the booster.\n",
-      "- Set the device for booster before call to inplace_predict.\n",
-      "\n",
-      "This warning will only be shown once.\n",
-      "\n",
-      "  return func(**kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Predictions completed!\n",
-      "   ⏱️  Time: 0.32 seconds\n",
-      "   📊 Total time: 317.30 seconds\n",
+      "Making predictions on test set...\n",
+      "Predictions completed!\n",
+      "Time: 0.29 seconds\n",
+      "Total time: 262.31 seconds\n",
       "\n",
       "======================================================================\n",
-      "✓✓✓ GPU TRAINING SUCCESSFUL! ✓✓✓\n",
+      "GPU TRAINING SUCCESSFUL!\n",
       "======================================================================\n",
       "\n",
-      "📈 Run the next cell to see model performance metrics\n",
+      "Run the next cell to see model performance metrics\n",
+      "   (Accuracy, Precision, Recall, F1 Score)\n",
+      "Predictions completed!\n",
+      "Time: 0.29 seconds\n",
+      "Total time: 262.31 seconds\n",
+      "\n",
+      "======================================================================\n",
+      "GPU TRAINING SUCCESSFUL!\n",
+      "======================================================================\n",
+      "\n",
+      "Run the next cell to see model performance metrics\n",
       "   (Accuracy, Precision, Recall, F1 Score)\n"
      ]
     }
@@ -1224,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "637c29e0",
    "metadata": {},
    "outputs": [
@@ -1232,10 +1216,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9979490637892733\n",
-      "Precision: 0.879441846928969\n",
-      "Recall: 0.9044405844037275\n",
-      "F1 Score: 0.8860424996997219\n"
+      "Accuracy: 0.997871707394478\n",
+      "Precision: 0.8632622623490404\n",
+      "Recall: 0.892103943748706\n",
+      "F1 Score: 0.8677380657296273\n"
      ]
     }
    ],
@@ -1252,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "d8f14618",
    "metadata": {},
    "outputs": [],
